--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-REACT_APP_API_BASE_URL=http://localhost:3000/
+REACT_APP_API_BASE_URL = http://localhost:3000/
+REACT_APP_API_KEY = 5d224862-e9b1-4ed3-9acb-740db1c40c60
